# intervalxt

./: .codespellrc  .gitignore  .gitmodules  .zenodo.json  AUTHORS  ChangeLog  Makefile.am  README  README.conda.md  README.md  asv.conf.json  benchmarks.json  build-locally.py  conda-forge.yml  configure.ac  iet.hh  pixi.toml  rever.xsh
.azure-pipelines/: azure-pipelines-linux.yml  run_docker_build.sh
.ci_support/: linux_coverage.yaml  linux_name_intervalxt_python_36_target_coverage.yaml  linux_name_intervalxt_python_36_target_style.yaml  linux_name_intervalxt_python_36_target_test.yaml  linux_name_intervalxt_python_37_target_coverage.yaml  linux_name_intervalxt_python_37_target_style.yaml  linux_name_intervalxt_python_37_target_test.yaml  linux_name_libintervalxt_python_36_target_release.yaml  linux_name_libintervalxt_python_37_target_release.yaml  linux_name_pyintervalxt_python_36_target_release.yaml  linux_name_pyintervalxt_python_37_target_release.yaml  linux_release.yaml  linux_style.yaml  linux_test36.yaml  linux_test37.yaml
.circleci/: config.yml
.github/: CODEOWNERS  codecov.yml
.scripts/: run_docker_build.sh
Azure/: 01737297-env-dff612091f16b84316aba8ab00ab45a2.json  (+90 more)
asv/: __init__.py  (+3 more)
libintervalxt/: .gitignore  Makefile.am  README.md  configure.ac  environment.yml
libintervalxt/benchmark/: .gitignore  Makefile.am  induction.benchmark.cc  main.cc  rational_affine_subspace.benchmark.cc  rational_linear_subspace.benchmark.cc
libintervalxt/intervalxt/: .gitignore  cereal.hpp  component.hpp  connection.hpp  copyable.hpp  cppyy.hpp  decomposition_step.hpp  dynamical_decomposition.hpp  fmt.hpp  forward.hpp  half_edge.hpp  induction_step.hpp  interval_exchange_transformation.hpp  intervalxt.hpp  label.hpp  length.hpp  length_with_coefficients.hpp  lengths.hpp  local.hpp.in  maybe_connection.hpp  movable.hpp  separatrix.hpp  serializable.hpp  shared.hpp
libintervalxt/intervalxt/detail/: component.ipp  id.hpp  label.ipp  length.ipp  rational_linear_subspace.hpp
libintervalxt/intervalxt/erased/: README.md  boost.hpp  cereal.hpp  forward.hpp  serializable.hpp
libintervalxt/intervalxt/erased/detail/: cereal.hpp  serializable.hpp  unparen.hpp
libintervalxt/intervalxt/sample/: arithmetic.hpp  cereal.hpp  coefficients.hpp  cppyy.hpp  e-antic-arithmetic.hpp  element_coefficients.hpp  element_floor_division.hpp  exact-real-arithmetic.hpp  floor_division.hpp  integer_coefficients.hpp  integer_floor_division.hpp  length.hpp  lengths.hpp  long-long-int-arithmetic.hpp  mpq_coefficients.hpp  mpq_floor_division.hpp  mpz-arithmetic.hpp  mpz_coefficients.hpp  mpz_floor_division.hpp  rational-arithmetic.hpp  renf_elem_coefficients.hpp  renf_elem_floor_division.hpp
libintervalxt/intervalxt/sample/detail/: length.ipp  lengths.ipp
libintervalxt/recipe/: build.sh  conda_build_config.yaml  meta.yaml
libintervalxt/src/: Makefile.am  component.cc  component_state.cc  connection.cc  decomposition_state.cc  decomposition_step.cc  dynamical_decomposition.cc  half_edge.cc  id.cc  id.hpp  implementation_of_decomposition.cc  induction_step.cc  interval_exchange_transformation.cc  interval_exchange_transformation.ipp  label.cc  length.cc  lengths_with_connections.cc  libintervalxt.map  rational_affine_subspace.cc  rational_linear_subspace.cc  separatrix.cc  similarity_tracker.cc
libintervalxt/src/impl/: component.impl.hpp  component_state.hpp  connection.impl.hpp  connection_data.hpp  decomposition_state.hpp  dynamical_decomposition.impl.hpp  forward.hpp  half_edge.impl.hpp  half_edge_state.hpp  implementation_of_decomposition.hpp  interval.hpp  interval_exchange_transformation.impl.hpp  lengths_with_connections.hpp  rational_affine_subspace.hpp  rational_linear_subspace.hpp  rational_linear_subspace.impl.hpp  separatrix.impl.hpp  separatrix_data.hpp  separatrix_state.hpp  similarity_tracker.hpp
libintervalxt/src/intervalxt/: cereal.hpp  component.hpp  connection.hpp  cppyy.hpp  decomposition_step.hpp  dynamical_decomposition.hpp  forward.hpp  induction_step.hpp  interval_exchange_transformation.hpp  intervalxt.hpp.in  label.hpp  length.hpp  length_with_coefficients.hpp  maybe_connection.hpp  maybe_saddle_connection.hpp  rational_linear_subspace.hpp
libintervalxt/src/intervalxt/detail/: component.ipp  connection.ipp  decomposition_step.ipp  dynamical_decomposition.ipp  id.hpp  interval_exchange_transformation.ipp  label.ipp  length.ipp  maybe_connection.ipp  rational_linear_subspace.hpp
libintervalxt/src/length_arithmetic/: integral.cc  mpq_class.cc  mpz_class.cc  renf_elem_class.cc
libintervalxt/src/util/: assert.ipp
libintervalxt/test/: .gitignore  Makefile.am  boshernitzan  boshernitzan.test.cc  cereal.test.cc  coefficients.test.cc  component.test.cc  connection.test.cc  cppyy.test.cc  dynamical_decomposition.test.cc  induction  induction.test.cc  interval_exchange_transformation.test.cc  label.test.cc  main.cc  main.hpp  rational_affine_subspace.test.cc  rational_linear_subspace.test.cc  saf  saf.test.cc  saf_zero.test.cc  separatrix.test.cc
pyintervalxt/src/: Makefile.am  setup.py  setup.py.in
pyintervalxt/src/pyintervalxt/: __init__.py  cppyy_intervalxt.py
pyintervalxt/test/: .gitignore  Makefile.am  interval_exchange_transformation.py  label.py  python-doctest.sh.in  test-env.sh.in
src/libintervalxt/: Makefile.am  fdiv.cc  iet.cc  interval_exchange_transformation.cc  label.cc  length.cc  rational_linear_subspace.cc
src/libintervalxt/intervalxt/: .gitignore  README.md  cppyy.hpp  forward.hpp  iet.hpp  interval.hpp  interval_exchange_transformation.hpp  intervalxt.hpp.in  label.hpp  length.hpp  maybe_saddle_connection.hpp  rat_linspace.hpp  rational_linear_subspace.hpp
src/libintervalxt/intervalxt/detail/: interval_exchange_transformation.ipp  label.ipp
src/pyintervalxt/: Makefile.am  setup.py.in
src/pyintervalxt/pyintervalxt/: __init__.py  cppyy_intervalxt.py
test/libintervalxt/: .gitignore  Makefile.am  iet.test.cc  induction.benchmark.cc  induction.test.cc  interval_exchange_transformation.test.cc  main.hpp  rational_linear_subspace.test.cc
(+89 files in other folders)
